--- a/sender.html
+++ b/sender.html
@@ -79,7 +79,6 @@
 
         #videos {
             font-size: 0;
-            /* to fix whitespace/scrollbars problem */
             height: 100%;
             pointer-events: none;
             position: absolute;
@@ -110,26 +109,22 @@
             max-height: 100%;
             max-width: 100%;
             object-fit: cover;
-            /* no letterboxing */
-            -moz-transform: scale(-1, 1);
-            -ms-transform: scale(-1, 1);
-            -o-transform: scale(-1, 1);
-            -webkit-transform: scale(-1, 1);
-            transform: scale(-1, 1);
             transition: opacity 1s;
             width: 100%;
+            transform: scale(-1, 1);
+
         }
 
         #mini-video {
             border: 1px solid gray;
             bottom: 20px;
             left: 20px;
-            /* video div is flipped horizontally when active*/
             max-height: 17%;
             max-width: 17%;
             opacity: 0;
             position: absolute;
             transition: opacity 1s;
+            transform: scale(-1, 1);
         }
 
         #mini-video.active {
@@ -143,14 +138,8 @@
             max-height: 100%;
             max-width: 100%;
             object-fit: cover;
-            /* no letterboxing */
             opacity: 0;
             position: absolute;
-            -moz-transform: rotateY(180deg);
-            -ms-transform: rotateY(180deg);
-            -o-transform: rotateY(180deg);
-            -webkit-transform: rotateY(180deg);
-            transform: rotateY(180deg);
             transition: opacity 1s;
             width: 100%;
         }
@@ -281,8 +270,8 @@
 
 <body>
     <div id="videos">
-        <video id="mini-video" autoplay="" playsinline="" muted="" class=""></video>
-        <video id="remote-video" autoplay="" playsinline="" class=""></video>
+        <video id="mini-video" controls autoplay="" playsinline="" muted="" class=""></video>
+        <video id="remote-video" controls autoplay="" playsinline="" class=""></video>
         <video id="local-video" autoplay="" playsinline="" muted="" class="active"></video>
     </div>
     <div id="icons" class="active">
@@ -355,16 +344,20 @@
         }
 
         let localPeerConnection;
-        let remotePeerConnection;
         let localStream;
+        let remoteStream;
         let offer;
         let inboundDataChannel;
         let outboundDataChannel;
+        let isSharing;
         const localICE = [];
         const dataChannelOptions = { ordered: true };
         const offerOptions = {
             offerToReceiveAudio: 1,
             offerToReceiveVideo: 1
+        };
+        const screenshareConstraints = {
+            video: true
         };
 
         async function getUserMedia() {
@@ -376,8 +369,9 @@
         }
 
         function gotRemoteStream(e) {
-            if (remoteVideo.srcObject !== e.streams[0]) {
-                remoteVideo.srcObject = e.streams[0];
+            remoteStream = e.streams[0];
+            if (remoteVideo.srcObject !== remoteStream) {
+                remoteVideo.srcObject = remoteStream;
                 console.log('Received remote stream');
             }
         }
@@ -390,8 +384,8 @@
             inboundDataChannel.onclose = console.log("CHANNEL CLOSE");
         }
 
-        function onConnectionStateChange(event){
-            switch(localPeerConnection.connectionState) {
+        function onConnectionStateChange(event) {
+            switch (localPeerConnection.connectionState) {
                 case "connected":
                     remoteVideo.classList.add('active');
                     miniVideo.classList.add('active');
@@ -399,23 +393,24 @@
                     localVideo.srcObject = null;
                     miniVideo.srcObject = localStream;
                     hangup.classList.remove('hidden');
-                
-                break;
+                    fullscreen.classList.remove('on');
+
+                    break;
                 case "disconnected":
                 case "failed":
                     console.log("TERMINATED Unexpectedly")
-                break;
+                    break;
                 case "closed":
                     console.log("CHANNEL CLOSED")
-                break;
+                    break;
             }
         }
 
-        async function addRecievedIce (iceList) {
+        async function addreceivedIce(iceList) {
             for (const ice of iceList) {
                 await localPeerConnection.addIceCandidate(ice);
             }
-            console.log("RECIEVED ICE CANDIDATES SET");
+            console.log("receiVED ICE CANDIDATES SET");
         }
 
         async function createPeerConnection() {
@@ -449,7 +444,7 @@
             localPeerConnection.ontrack = gotRemoteStream;
             localPeerConnection.ondatachannel = receiveChannelCallback;
             localPeerConnection.onconnectionstatechange = onConnectionStateChange;
-            
+
             localStream.getTracks()
                 .forEach(track => localPeerConnection.addTrack(track, localStream));
             console.log('Adding Local Stream to peer connection');
@@ -468,15 +463,43 @@
         }
 
         fullscreen.onclick = async e => {
-            const answerResponse = JSON.parse(await navigator.clipboard.readText());
-            if (!(answerResponse.answer && answerResponse.ice.length)) return;
-            const answer = answerResponse.answer;
-            console.log("ANSWER FOUND");
-            fullscreen.classList.add('on');
-            await localPeerConnection.setRemoteDescription(answer);
-            console.log("ANSWER SET");
-            await addRecievedIce(answerResponse.ice);
-            console.log("CONNECTION OPEN");
+            if (!localPeerConnection) return;
+            if (localPeerConnection.connectionState != 'connected') {
+                const answerResponse = JSON.parse(await navigator.clipboard.readText());
+                if (!(answerResponse.answer && answerResponse.ice.length)) return;
+                const answer = answerResponse.answer;
+                console.log("ANSWER FOUND");
+                fullscreen.classList.add('on');
+                await localPeerConnection.setRemoteDescription(answer);
+                console.log("ANSWER SET");
+                await addreceivedIce(answerResponse.ice);
+                console.log("CONNECTION OPEN");
+            } else {
+                screenshare()
+            }
+        }
+
+        async function screenshare() {
+            const sender = localPeerConnection.getSenders().find(s => s.track && s.track.kind === 'video');
+            if (!sender) return;
+            if (isSharing) {
+                const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+                sender.replaceTrack(stream.getVideoTracks()[0]);
+                localStream = stream;
+                remoteVideo.srcObject = remoteStream;
+                miniVideo.srcObject = localStream;
+                fullscreen.classList.remove('on');
+                isSharing = false;
+            } else {
+                const stream = await navigator.mediaDevices.getDisplayMedia(screenshareConstraints);
+                sender.replaceTrack(stream.getVideoTracks()[0]);
+                localStream = stream;
+                localStream.onended = e => screenshare();
+                remoteVideo.srcObject = localStream;
+                miniVideo.srcObject = remoteStream;
+                fullscreen.classList.add('on');
+                isSharing = true;
+            }
         }
 
         const init = async () => {
