--- a/answer.html
+++ b/answer.html
@@ -324,6 +324,7 @@
 
     </div>
     <script>
+        window.focus();
         const localVideo = document.getElementById('local-video');
         const remoteVideo = document.getElementById('remote-video');
         const miniVideo = document.getElementById('mini-video');
